--- a/PlanService/src/main/resources/application.properties
+++ b/PlanService/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.data.mongodb.database=senior
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=178.128.120.49
 
+authenservice.url.userService=http://localhost:3001
+
 authenservice.jwt.secret=plan2task
