[EDIT] แก้ dockerfile

--- a/UserService/Dockerfile
+++ b/UserService/Dockerfile
@@ -1,13 +1,18 @@
-FROM openjdk:8-jdk-alpine
+FROM maven:3.5.2-jdk-8-alpine AS build
 
 MAINTAINER tozzis
 
-VOLUME /tmp
+WORKDIR /app
+COPY pom.xml /app/
+COPY src /app/src/
+RUN mvn package
+
+FROM openjdk:8-jdk-alpine
+
+WORKDIR /app
+
+COPY --from=build /app/target/UserService-0.0.1-SNAPSHOT.jar /app
 
 EXPOSE 3001
 
-ARG JAR_FILE=target/UserService-0.0.1-SNAPSHOT.jar
-
-ADD ${JAR_FILE} app.jar
-
-ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-jar", "/app.jar"]
+ENTRYPOINT ["java", "-jar", "/app/UserService-0.0.1-SNAPSHOT.jar"]
