--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,5 +4,5 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: docker-compose build
-      - run: docker-compose up -d
+      - run: sudo docker-compose build
+      - run: sudo docker-compose up -d
