--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2
 jobs:
   build:
     machine: true
+    working_directory: /var/Plan2Task-BackEnd
     steps:
       - checkout
       - run: sudo docker-compose build
