--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
    working_directory: ~/Plan2Task-BackEnd
    steps:
      - checkout
+     - run: git pull
      - run: docker-compose down
      - run: docker-compose build
      - run: docker-compose up -d
