--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
       - docker
    working_directory: ~/Plan2Task-BackEnd
    steps:
+     - run:
+        name: ssh login
+        commands: ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173
      - checkout
      - run: docker-compose down
      - run: docker-compose build
