--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,10 +6,11 @@ jobs:
       - docker
    working_directory: ~/Plan2Task-BackEnd
    steps:
-     - run:
-        name: ssh login
-        commands: 'ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173'
      - checkout
+     - run:
+        name: ssh and git
+        commands: 'ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173 \
+        sudo git pull'
      - run: docker-compose down
      - run: docker-compose build
      - run: docker-compose up -d
