--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
      - checkout
      - run:
         name: ssh and git
-        commands: 'ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173 \
+        command: 'ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173 \
         sudo git pull'
      - run: docker-compose down
      - run: docker-compose build
@@ -17,5 +17,5 @@ jobs:
    deployment:
      production:
           branch: master
-          commands:
+          command:
                - bin/push.sh
