--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
    steps:
      - checkout
      - run:
-        name: ssh and git
+        name: ssh
         command: ssh -i ~/.ssh/gc_plan2task_app tozzis@35.198.252.173
      - run: docker-compose down
      - run: docker-compose build
