--- a/PlanService/src/main/resources/application.properties
+++ b/PlanService/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.data.mongodb.database=senior
 spring.data.mongodb.port=27017
 spring.data.mongodb.host=35.240.204.166
 
-authenservice.url.userService=http://localhost:3001
+authenservice.url.userService=https://www.userservice.plan2task.xyz
 
 authenservice.jwt.secret=plan2task
