--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,17 @@
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+    - build:
+        filters:
+          branches:
+            only: master
+    - deploy:
+        requires:
+        - build
+          filters:
+            branches:
+              only: master
 version: 2.0
 jobs:
  build:
@@ -7,14 +21,23 @@ jobs:
    working_directory: ~/Plan2Task-BackEnd
    steps:
      - checkout
-     - run:
-        name: ssh
-        command: ssh -i gc_plan2task_app tozzis@35.198.252.173
      - run: docker-compose down
      - run: docker-compose build
      - run: docker-compose up -d
-   deployment:
-     production:
-          branch: master
-          command:
-               - bin/push.sh
+  deploy:
+   steps:
+     - checkout
+     - add_ssh_keys:
+        fingerprints:
+            - $fingerprint
+      - run:
+          name: Deploy Plan2Task
+          command: |
+            ssh $SSH_USER@$SSH_HOST  \
+            '
+              cd /var/Plan2Task-BackEnd;
+              sudo docker-compose down
+              sudo git pull;
+              sudo docker-compose build;
+              sudo docker-compose up -d;
+            '
