--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,16 @@ version: "3.0"
 services: 
   user:
     build: UserService
+    image: user_service
     ports: 
       - "3001:3001"
   friend:
     build: FriendService
+    image: friend_service
     ports: 
       - "3004:3004"
   plan:
     build: PlanService
+    image: plan_service
     ports: 
       - "3002:3002"
