[EDIT] แก้ circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
       - run: docker-compose build
       - run: docker-compose up -d
   deploy:
+    machine: true
+    working_directory: ~/Plan2Task-BackEnd
     steps:
       - checkout
       - add_ssh_keys:
