--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,17 @@
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+    - build:
+        filters:
+          branches:
+            only: master
+    - deploy:
+        requires:
+        - build
+        filters:
+          branches:
+            only: master
 version: 2.0
 jobs:
   build:
