--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
     steps:
       - checkout
       - run: docker-compose down
+      - run: docker image prune -f
       - run: docker-compose build
       - run: docker-compose up -d
   deploy:
@@ -38,7 +39,8 @@ jobs:
             ssh $SSH_USER@$SSH_HOST  \
             '
               cd /var/Plan2Task-BackEnd;
-              sudo docker-compose down
+              sudo docker-compose down;
+              sudo docker image prune -f;
               sudo git pull;
               sudo docker-compose build;
               sudo docker-compose up -d;
