--- a/FileService/src/main/resources/application.properties
+++ b/FileService/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.data.mongodb.host=35.240.204.166
 authenservice.jwt.secret=plan2task
 
 file.upload-dir=./uploads
+
+spring.servlet.multipart.max-file-size=30MB
+spring.servlet.multipart.max-request-size=30MB
+spring.servlet.multipart.enabled=true
